Use qt-designer to setup action slots.
Their are slots that are automatically connected when a .ui file is
compiled. I have changed New, Save, SaveAs, and Open to use that
method for connecting the slots.

Also, I added Ctrl-O as a shortcut for Open while I was in there.

--HG--
branch : develop

--- a/src/app/valentina/mainwindow.ui
+++ b/src/app/valentina/mainwindow.ui
@@ -2036,7 +2036,7 @@
     <string>Open file with pattern</string>
    </property>
    <property name="shortcut">
-    <string notr="true"/>
+    <string>Ctrl+O</string>
    </property>
    <property name="menuRole">
     <enum>QAction::NoRole</enum>
