--- a/src/libs/ifc/schema.qrc
+++ b/src/libs/ifc/schema.qrc
@@ -51,6 +51,7 @@
         <file>schema/pattern/v0.7.11.xsd</file>
         <file>schema/pattern/v0.7.12.xsd</file>
         <file>schema/pattern/v0.7.13.xsd</file>
+        <file>schema/pattern/v0.8.0.xsd</file>
         <file>schema/standard_measurements/v0.3.0.xsd</file>
         <file>schema/standard_measurements/v0.4.0.xsd</file>
         <file>schema/standard_measurements/v0.4.1.xsd</file>
