--- a/src/libs/vtools/dialogs/tools/piece/dialogpiecepath.ui
+++ b/src/libs/vtools/dialogs/tools/piece/dialogpiecepath.ui
@@ -1244,6 +1244,26 @@
               </attribute>
              </widget>
             </item>
+            <item>
+             <widget class="QRadioButton" name="radioButtonUMark">
+              <property name="text">
+               <string>U mark</string>
+              </property>
+              <attribute name="buttonGroup">
+               <string notr="true">buttonGroupMarkType</string>
+              </attribute>
+             </widget>
+            </item>
+            <item>
+             <widget class="QRadioButton" name="radioButtonBoxMark">
+              <property name="text">
+               <string>Box mark</string>
+              </property>
+              <attribute name="buttonGroup">
+               <string notr="true">buttonGroupMarkType</string>
+              </attribute>
+             </widget>
+            </item>
            </layout>
           </widget>
          </item>
