Make labels in dialogs About App selectable. Will help easier copy values. ref #968.
--HG--
branch : develop

--- a/src/app/tape/dialogs/dialogabouttape.ui
+++ b/src/app/tape/dialogs/dialogabouttape.ui
@@ -77,6 +77,9 @@
          <property name="alignment">
           <set>Qt::AlignCenter</set>
          </property>
+         <property name="textInteractionFlags">
+          <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
+         </property>
         </widget>
        </item>
        <item alignment="Qt::AlignHCenter">
@@ -89,6 +92,9 @@
          </property>
          <property name="text">
           <string>Build revision:</string>
+         </property>
+         <property name="textInteractionFlags">
+          <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
          </property>
         </widget>
        </item>
@@ -174,6 +180,9 @@
          <property name="text">
           <string notr="true">label_Tape_Built</string>
          </property>
+         <property name="textInteractionFlags">
+          <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
+         </property>
         </widget>
        </item>
        <item>
@@ -205,6 +214,9 @@
          </property>
          <property name="text">
           <string notr="true">label_QT_Version</string>
+         </property>
+         <property name="textInteractionFlags">
+          <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
          </property>
         </widget>
        </item>
