--- a/src/app/valentina/dialogs/dialogaboutapp.ui
+++ b/src/app/valentina/dialogs/dialogaboutapp.ui
@@ -86,6 +86,9 @@
          <property name="alignment">
           <set>Qt::AlignCenter</set>
          </property>
+         <property name="textInteractionFlags">
+          <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
+         </property>
         </widget>
        </item>
        <item alignment="Qt::AlignHCenter">
@@ -98,6 +101,9 @@
          </property>
          <property name="text">
           <string>Build revision:</string>
+         </property>
+         <property name="textInteractionFlags">
+          <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
          </property>
         </widget>
        </item>
@@ -240,6 +246,9 @@ Ronan Le Tiec</string>
          <property name="text">
           <string notr="true">label_Valentina_Built</string>
          </property>
+         <property name="textInteractionFlags">
+          <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
+         </property>
         </widget>
        </item>
        <item>
@@ -265,6 +274,9 @@ Ronan Le Tiec</string>
          </property>
          <property name="text">
           <string notr="true">label_QT_Version</string>
+         </property>
+         <property name="textInteractionFlags">
+          <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
          </property>
         </widget>
        </item>
