make details hide of visible depend on its layout status
--HG--
branch : develop

--- a/src/app/valentina/dialogs/vwidgetdetails.ui
+++ b/src/app/valentina/dialogs/vwidgetdetails.ui
@@ -15,6 +15,19 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
+    <widget class="QCheckBox" name="checkBoxHideNotInLayout">
+     <property name="toolTip">
+      <string extracomment="hide details that are not in layout"/>
+     </property>
+     <property name="toolTipDuration">
+      <number>1</number>
+     </property>
+     <property name="text">
+      <string>Hide not in layout</string>
+     </property>
+    </widget>
+   </item>
+   <item>
     <widget class="QTableWidget" name="tableWidget">
      <property name="alternatingRowColors">
       <bool>true</bool>
