New option --manualPriority.
Helps to disable following manual priority without need to change settings for
each piece.

--HG--
branch : develop

--- a/src/app/valentina/dialogs/dialoglayoutsettings.ui
+++ b/src/app/valentina/dialogs/dialoglayoutsettings.ui
@@ -463,6 +463,13 @@
          </widget>
         </item>
         <item>
+         <widget class="QCheckBox" name="checkBoxManualPriority">
+          <property name="text">
+           <string>Manual priority</string>
+          </property>
+         </widget>
+        </item>
+        <item>
          <widget class="Line" name="line_2">
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
