VPiece to JSON.
Strict version to support Unit tests.

--HG--
branch : develop

--- a/src/test/ValentinaTest/share/test_data.qrc
+++ b/src/test/ValentinaTest/share/test_data.qrc
@@ -2,5 +2,7 @@
     <qresource prefix="/">
         <file>input_loop_by_intersection.json</file>
         <file>output_loop_by_intersection.json</file>
+        <file>Issue_620/input.json</file>
+        <file>Issue_620/output.json</file>
     </qresource>
 </RCC>
