New test case "Loop for start point on line".
--HG--
branch : develop

--- a/src/test/ValentinaTest/share/test_data.qrc
+++ b/src/test/ValentinaTest/share/test_data.qrc
@@ -4,5 +4,7 @@
         <file>Issue_620/output.json</file>
         <file>loop_by_intersection/input.json</file>
         <file>loop_by_intersection/output.json</file>
+        <file>loop_start_point_on_line/input.json</file>
+        <file>loop_start_point_on_line/output.json</file>
     </qresource>
 </RCC>
