Fix broken tests.
--HG--
branch : develop

--- a/src/test/ValentinaTest/share/test_data.qrc
+++ b/src/test/ValentinaTest/share/test_data.qrc
@@ -6,5 +6,81 @@
         <file>loop_by_intersection/output.json</file>
         <file>loop_start_point_on_line/input.json</file>
         <file>loop_start_point_on_line/output.json</file>
+        <file>seamtest1_by_second_right_angle/input.json</file>
+        <file>seamtest1_by_second_right_angle/output.json</file>
+        <file>seamtest1_by_first_right_angle/input.json</file>
+        <file>seamtest1_by_first_right_angle/output.json</file>
+        <file>seamtest1_by_second_edge_symmetry/input.json</file>
+        <file>seamtest1_by_second_edge_symmetry/output.json</file>
+        <file>seamtest1_by_angle/input.json</file>
+        <file>seamtest1_by_angle/output.json</file>
+        <file>seamtest1_by_first_edge_symmetry/input.json</file>
+        <file>seamtest1_by_first_edge_symmetry/output.json</file>
+        <file>seamtest1_by_intersection/input.json</file>
+        <file>seamtest1_by_intersection/output.json</file>
+        <file>seamtest2/input.json</file>
+        <file>seamtest2/output.json</file>
+        <file>seamtest3/input.json</file>
+        <file>seamtest3/output.json</file>
+        <file>Issue_298_case1/input.json</file>
+        <file>Issue_298_case1/output.json</file>
+        <file>Issue_298_case2/input.json</file>
+        <file>Issue_298_case2/output.json</file>
+        <file>Issue_646/input.json</file>
+        <file>Issue_646/output.json</file>
+        <file>Issue_923_test1/input.json</file>
+        <file>Issue_923_test1/output.json</file>
+        <file>Issue_923_test1_1/input.json</file>
+        <file>Issue_923_test1_1/output.json</file>
+        <file>Issue_923_test2/input.json</file>
+        <file>Issue_923_test2/output.json</file>
+        <file>Issue_923_test2_2/input.json</file>
+        <file>Issue_923_test2_2/output.json</file>
+        <file>Issue_923_test3/input.json</file>
+        <file>Issue_923_test3/output.json</file>
+        <file>Issue_923_test3_3/input.json</file>
+        <file>Issue_923_test3_3/output.json</file>
+        <file>Issue_923_test4/input.json</file>
+        <file>Issue_923_test4/output.json</file>
+        <file>Issue_923_test4_4/input.json</file>
+        <file>Issue_923_test4_4/output.json</file>
+        <file>Issue_923_test5/input.json</file>
+        <file>Issue_923_test5/output.json</file>
+        <file>Issue_923_test5_5/input.json</file>
+        <file>Issue_923_test5_5/output.json</file>
+        <file>Issue_923_test6/input.json</file>
+        <file>Issue_923_test6/output.json</file>
+        <file>Issue_923_test6_6/input.json</file>
+        <file>Issue_923_test6_6/output.json</file>
+        <file>Issue_927/input.json</file>
+        <file>Issue_927/output.json</file>
+        <file>Issue_687/input.json</file>
+        <file>Issue_687/output.json</file>
+        <file>Issue_767_Fabric_TopCollar/input.json</file>
+        <file>Issue_767_Fabric_TopCollar/output.json</file>
+        <file>Issue_767_Fabric_SkinFusing_TopCollar_Notch/input.json</file>
+        <file>Issue_767_Fabric_SkinFusing_TopCollar_Notch/output.json</file>
+        <file>Issue_883_ledge/input.json</file>
+        <file>Issue_883_ledge/output.json</file>
+        <file>Issue_883_prong/input.json</file>
+        <file>Issue_883_prong/output.json</file>
+        <file>Issue_880_Detail/input.json</file>
+        <file>Issue_880_Detail/output.json</file>
+        <file>Issue_880_Detail_1/input.json</file>
+        <file>Issue_880_Detail_1/output.json</file>
+        <file>Issue_937_case_5/input.json</file>
+        <file>Issue_937_case_5/output.json</file>
+        <file>Issue_937_case_1/input.json</file>
+        <file>Issue_937_case_1/output.json</file>
+        <file>Issue_937_case_2/input.json</file>
+        <file>Issue_937_case_2/output.json</file>
+        <file>Issue_937_case_3/input.json</file>
+        <file>Issue_937_case_3/output.json</file>
+        <file>Issue_937_case_4/input.json</file>
+        <file>Issue_937_case_4/output.json</file>
+        <file>Issue_548/input.json</file>
+        <file>Issue_548/output.json</file>
+        <file>Issue_642/input.json</file>
+        <file>Issue_642/output.json</file>
     </qresource>
 </RCC>
