--- a/src/test/ValentinaTest/share/test_data.qrc
+++ b/src/test/ValentinaTest/share/test_data.qrc
@@ -84,5 +84,17 @@
         <file>Issue_642/output.json</file>
         <file>seamtest1_by_angle_2/input.json</file>
         <file>seamtest1_by_angle_2/output.json</file>
+        <file>DP_6_hem_by_first_edge_right_angle/input.json</file>
+        <file>DP_6_hem_by_first_edge_right_angle/output.json</file>
+        <file>DP_6_hem_by_first_edge_symmetry/input.json</file>
+        <file>DP_6_hem_by_first_edge_symmetry/output.json</file>
+        <file>DP_6_hem_by_intersection/input.json</file>
+        <file>DP_6_hem_by_intersection/output.json</file>
+        <file>DP_6_hem_by_length/input.json</file>
+        <file>DP_6_hem_by_length/output.json</file>
+        <file>DP_6_hem_by_second_edge_right_angle/input.json</file>
+        <file>DP_6_hem_by_second_edge_right_angle/output.json</file>
+        <file>DP_6_hem_by_second_edge_symmetry/input.json</file>
+        <file>DP_6_hem_by_second_edge_symmetry/output.json</file>
     </qresource>
 </RCC>
